bug 227769 patch by Sergei Dolgov sergei_d@fi.tartu.ee r=timeless (no sr needed, beos specific) Mouse is "sticking" at scrolling